--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <div class="wrapper">
     <div id="headline">Selam</div>
     <div id="button-container">
-      <button class="choice" onclick="nextStep('a')">a1</button>
-      <button class="choice" onclick="nextStep('b')">b1</button>
+      <!-- Butonlar script ile oluşturulacak -->
     </div>
-    <div id="message">İyi ki doğdun Erva! 🎉</div>
+    <div id="message">İyi ki doğdun Erva! 🎉🤩</div>
   </div>
+
+  <!-- Arka plan müziği -->
+  <audio id="background-music" src="audio/dogum-gunu.mp3" preload="auto"></audio>
+
   <script src="script.js"></script>
 </body>
 </html>
