--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <!-- Arka plan müziği -->
-  <audio id="background-music" src="audio/dogum-gunu.mp3" preload="auto"></audio>
+  <audio id="background-music" src="dogum-gunu.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
 </body>
